--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@
   justify-content: center;
   height: 100vh;
   width: 100vw;
-  /* top: 100px; */
+  top: 100px;
   backdrop-filter: blur(4px);
   background-color: rgba(0,0,0,0.5);
   gap: 20px;
@@ -107,6 +107,9 @@
   backdrop-filter: blur(5px);
 }
 
+.aboutus_container {
+    overflow: auto;
+}
 .product-list-container.visible {
   top: 0;
 }
@@ -115,8 +118,9 @@
   .content {
     flex-direction: column;
     align-items: center;
-    width: 100vw;
-    height: 100vh;
+    /* width: 100vw;
+    height: 100vh; */
+    height: 100%;
   }
 
   .landing_content {
@@ -124,6 +128,23 @@
     width: 80%; /* Adjust as needed */
     text-align: center;
   }
+
+  .content h1{
+    font-size: 2.3rem;
+  }
+
+  .content p{
+    font-size: 1rem;
+}
+
+.aboutus_container{
+    margin-block-end: 30px;
+  }
+
+  .get-started-button {
+    margin-block-start: 20px;
+  }
+
 
   .aboutus_container {
     padding: 10px;
@@ -133,13 +154,20 @@
 }
 
 @media screen and (max-width: 480px) {
+    .content {
+        flex-direction: column;
+        align-items: center;
+        height: 100%;
+    }
   .landing_content {
     margin-top: 50px; /* Adjust as needed */
-    width: 90%; /* Adjust as needed */
+    width: 100%; /* Adjust as needed */
+    /* height: 100%; */
   }
 
   .aboutus_container {
     width: 100%; /* Adjust as needed */
     overflow: auto;
+    /* height: 100%; */
   }
 }
